--- a/.github/file-filters.yml
+++ b/.github/file-filters.yml
@@ -8,21 +8,27 @@ presenter-test-lint-code: &presenter-test-lint-code
   - 'presenter/**/*'
 
 presenter-test-unit-code: &presenter-test-unit-code
-  - 'presenter/**/*!(.md)'
-  - '!(presenter/.vuepress/**/*)'
+  - '.github/workflows/presenter.test.unit.code.yml'
+  - '.github/file-filter.yml'
+  # all files in presenter, except
+  # - all in presenter/.vuepress
+  # - all .md files in presenter
+  - 'presenter/!(.vuepress)/**/*!(.md)'
 
 presenter-test-build-code: &presenter-test-build-code
-  - 'presenter/**/*!(.md)'
-  - '!(presenter/.vuepress/**/*)'
+  - '.github/workflows/presenter.test.build.code.yml'
+  - '.github/file-filter.yml'
+  - 'presenter/!(.vuepress)/**/*!(.md)'
 
 presenter-test-build-docker: &presenter-test-build-docker
-  - 'presenter/**/*!(.md)'
-  - '!(presenter/.vuepress/**/*)'
+  - '.github/workflows/presenter.test.build.docker.yml'
+  - '.github/file-filter.yml'
+  - 'presenter/!(.vuepress)/**/*!(.md)'
 
 presenter-test-build-docs: &presenter-test-build-docs
   - 'presenter/**/*.md'
-  - 'presenter/.github/workflows/presenter.deploy.docs.yml'
-  - 'presenter/.github/file-filter.yml'
+  - '.github/workflows/presenter.deploy.docs.yml'
+  - '.github/file-filter.yml'
   - 'presenter/.vuepress/*'
   - 'presenter/package.json'
 
