--- a/.github/file-filters.yml
+++ b/.github/file-filters.yml
@@ -9,7 +9,7 @@ presenter-test-lint-code: &presenter-test-lint-code
 
 presenter-test-unit-code: &presenter-test-unit-code
   - '.github/workflows/presenter.test.unit.code.yml'
-  - '.github/file-filter.yml'
+  - '.github/file-filters.yml'
   # all files in presenter, except
   # - all in presenter/.vuepress
   # - all .md files in presenter
@@ -17,18 +17,19 @@ presenter-test-unit-code: &presenter-test-unit-code
 
 presenter-test-build-code: &presenter-test-build-code
   - '.github/workflows/presenter.test.build.code.yml'
-  - '.github/file-filter.yml'
+  - '.github/file-filters.yml'
   - 'presenter/!(.vuepress)/**/*!(.md)'
 
 presenter-test-build-docker: &presenter-test-build-docker
   - '.github/workflows/presenter.test.build.docker.yml'
-  - '.github/file-filter.yml'
+  - '.github/file-filters.yml'
   - 'presenter/!(.vuepress)/**/*!(.md)'
 
 presenter-test-build-docs: &presenter-test-build-docs
   - 'presenter/**/*.md'
   - '.github/workflows/presenter.deploy.docs.yml'
-  - '.github/file-filter.yml'
+  - '.github/workflows/presenter.test.build.docs.yml'
+  - '.github/file-filters.yml'
   - 'presenter/.vuepress/*'
   - 'presenter/package.json'
 
