--- a/.github/file-filters.yml
+++ b/.github/file-filters.yml
@@ -26,59 +26,79 @@ presenter-test-build-docker: &presenter-test-build-docker
   - 'presenter/!(.vuepress)/**/*!(.md)'
 
 presenter-test-build-docs: &presenter-test-build-docs
-  - 'presenter/**/*.md'
   - '.github/workflows/presenter.deploy.docs.yml'
   - '.github/workflows/presenter.test.build.docs.yml'
+  - 'presenter/**/*.md'
   - '.github/file-filters.yml'
   - 'presenter/.vuepress/*'
   - 'presenter/package.json'
 
 presenter-test-build-storybook: &presenter-test-build-storybook
-  - 'presenter/**/*'
+  - '.github/workflows/presenter.test.build.storybook.yml'
+  - '.github/file-filters.yml'
+  - 'presenter/!(.vuepress)/**/*!(.md)'
 
 # frontend
 frontend-test-lint-code: &frontend-test-lint-code
   - 'frontend/**/*'
 
 frontend-test-unit-code: &frontend-test-unit-code
-  - 'frontend/**/*'
+  - '.github/workflows/frontend.test.unit.code.yml'
+  - '.github/file-filters.yml'
+  - 'frontend/!(.vuepress)/**/*!(.md)'
 
 frontend-test-build-code: &frontend-test-build-code
-  - 'frontend/**/*'
+  - '.github/workflows/frontend.test.build.code.yml'
+  - '.github/file-filters.yml'
+  - 'frontend/!(.vuepress)/**/*!(.md)'
 
 frontend-test-build-docker: &frontend-test-build-docker
-  - 'frontend/**/*'
+  - '.github/workflows/frontend.test.build.docker.yml'
+  - '.github/file-filters.yml'
+  - 'frontend/!(.vuepress)/**/*!(.md)'
 
 frontend-test-build-docs: &frontend-test-build-docs
+  - '.github/workflows/frontend.test.build.docs.yml'
+  - '.github/file-filters.yml'
   - 'frontend/**/*.md'
-  - 'frontend/.github/workflows/frontend.deploy.docs.yml'
   - 'frontend/.vuepress/*'
   - 'frontend/package.json'
 
 frontend-test-build-storybook: &frontend-test-build-storybook
-  - 'frontend/**/*'
+  - '.github/workflows/frontend.test.build.storybook.yml'
+  - '.github/file-filters.yml'
+  - 'frontend/!(.vuepress)/**/*!(.md)'
 
 # admin
 admin-test-lint-code: &admin-test-lint-code
   - 'admin/**/*'
 
 admin-test-unit-code: &admin-test-unit-code
-  - 'admin/**/*'
+  - '.github/workflows/admin.test.unit.code.yml'
+  - '.github/file-filters.yml'
+  - 'admin/!(.vuepress)/**/*!(.md)'
 
 admin-test-build-code: &admin-test-build-code
-  - 'admin/**/*'
+  - '.github/workflows/admin.test.build.code.yml'
+  - '.github/file-filters.yml'
+  - 'admin/!(.vuepress)/**/*!(.md)'
 
 admin-test-build-docker: &admin-test-build-docker
-  - 'admin/**/*'
+  - '.github/workflows/admin.test.build.docker.yml'
+  - '.github/file-filters.yml'
+  - 'admin/!(.vuepress)/**/*!(.md)'
 
 admin-test-build-docs: &admin-test-build-docs
+  - '.github/workflows/admin.test.build.docs.yml'
+  - '.github/file-filters.yml'
   - 'admin/**/*.md'
-  - 'admin/.github/workflows/admin.deploy.docs.yml'
   - 'admin/.vuepress/*'
   - 'admin/package.json'
 
 admin-test-build-storybook: &admin-test-build-storybook
-  - 'admin/**/*'
+  - '.github/workflows/admin.test.build.storybook.yml'
+  - '.github/file-filters.yml'
+  - 'admin/!(.vuepress)/**/*!(.md)'
 
 
 # backend
