--- a/.github/file-filters.yml
+++ b/.github/file-filters.yml
@@ -100,22 +100,28 @@ admin-test-build-storybook: &admin-test-build-storybook
   - '.github/file-filters.yml'
   - 'admin/!(.vuepress)/**/*!(.md)'
 
-
 # backend
 backend-test-lint-code: &backend-test-lint-code
   - 'backend/**/*'
 
 backend-test-unit-code: &backend-test-unit-code
-  - 'backend/**/*'
+  - '.github/workflows/backend.test.unit.code.yml'
+  - '.github/file-filters.yml'
+  - 'backend/!(.vuepress)/**/*!(.md)'
 
 backend-test-build-code: &backend-test-build-code
-  - 'backend/**/*'
+  - '.github/workflows/backend.test.build.code.yml'
+  - '.github/file-filters.yml'
+  - 'backend/!(.vuepress)/**/*!(.md)'
 
 backend-test-build-docker: &backend-test-build-docker
-  - 'backend/**/*'
+  - '.github/workflows/backend.test.build.docker.yml'
+  - '.github/file-filters.yml'
+  - 'backend/!(.vuepress)/**/*!(.md)'
 
 backend-test-build-docs: &backend-test-build-docs
+  - 'backend/.github/workflows/backend.test.build.docs.yml'
+  - '.github/file-filters.yml'
   - 'backend/**/*.md'
-  - 'backend/.github/workflows/backend.deploy.docs.yml'
   - 'backend/.vuepress/*'
   - 'backend/package.json'
