--- a/backend/package.json
+++ b/backend/package.json
@@ -41,7 +41,9 @@
     "@vuepress/theme-default": "^2.0.0-rc.30",
     "axios": "^1.7.2",
     "class-validator": "^0.14.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "fast-xml-parser": "^4.4.0",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.23.0",
@@ -56,6 +58,7 @@
   },
   "devDependencies": {
     "@eslint-community/eslint-plugin-eslint-comments": "^4.3.0",
+    "@types/cors": "^2.8.17",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.12",
