--- a/.github/workflows/e2e.test.lint.yml
+++ b/.github/workflows/e2e.test.lint.yml
@@ -37,3 +37,4 @@ jobs:
 
       - name: E2E files | Lint
         run: npm install && npm run test:lint:eslint
+        working-directory: ${{env.WORKING_DIRECTORY}}
