add initial authentik login test

--- a/.github/workflows/e2e.run.tests.yml
+++ b/.github/workflows/e2e.run.tests.yml
@@ -1,9 +1,6 @@
 name: e2e:test:all test the application end to end
 
-on:
-  push:
-    branches:
-      - initial-e2e2-tests
+on: push
 
 jobs:
   e2e-tests:
