--- a/.github/workflows/e2e.run.tests.yml
+++ b/.github/workflows/e2e.run.tests.yml
@@ -21,7 +21,7 @@ jobs:
           ./database.unpack.sh
           docker compose up -d
           cd ../frontend
-          docker compose -f docker-compose.yml -f docker-compose.test.yml up -d frontend
+          docker compose -f docker-compose.yml up -d frontend
           sleep 10m
 
       - name: Install cucumber-json-formatter
