--- a/.github/workflows/e2e.run.tests.yml
+++ b/.github/workflows/e2e.run.tests.yml
@@ -25,7 +25,7 @@ jobs:
           docker compose -f docker-compose.yml -f docker-compose.test.yml up -d frontend
           cd  ../presenter
           cp .env.dist .env
-        # docker compose TODO
+          docker compose -f docker-compose.yml -f docker-compose.test.yml up -d presenter
           sleep 4m
 
       - name: Install cucumber-json-formatter
