--- a/.github/workflows/e2e.run.tests.yml
+++ b/.github/workflows/e2e.run.tests.yml
@@ -22,10 +22,10 @@ jobs:
           docker compose up -d
           cd ../frontend
           cp .env.dist .env
-          docker compose -f docker-compose.yml -f docker-compose.test.yml up -d frontend
+          docker compose -f docker-compose.test.yml up -d frontend
           cd  ../presenter
           cp .env.dist .env
-          docker compose -f docker-compose.yml -f docker-compose.test.yml up -d presenter
+          docker compose -f docker-compose.test.yml up -d presenter
           sleep 4m
 
       - name: Install cucumber-json-formatter
