--- a/presenter/docker-compose.test.yml
+++ b/presenter/docker-compose.test.yml
@@ -4,9 +4,9 @@ services:
   #######################################################
   # FRONTEND ############################################
   #######################################################
-  frontend:
+  presenter:
     # name the image so that it cannot be found in a DockerHub repository, otherwise it will not be built locally from the 'dockerfile' but pulled from there
-    image: it4c/frontend:local-test
+    image: it4c/presenter:local-test
     build:
       context: .
       target: test
