--- a/presenter/Dockerfile
+++ b/presenter/Dockerfile
@@ -93,13 +93,16 @@ RUN npm run build
 ##################################################################################
 # TEST ###########################################################################
 ##################################################################################
-#FROM build as test
+FROM base as test
 
-# Install Additional Software
-# RUN apk add --no-cache bash jq
+# Copy everything
+COPY . .
+# npm install
+RUN npm install --include=dev --frozen-lockfile --non-interactive
+RUN npm run build
 
 # Run command
-#CMD /bin/sh -c "yarn run dev"
+CMD /bin/sh -c "npm run server:prod"
 
 ##################################################################################
 # PRODUCTION (Does contain only "binary"- and static-files to reduce image size) #
