--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -44,29 +44,24 @@ jobs:
     name: Build Docker Production - Admin
     needs: files-changed
     runs-on: ubuntu-latest
-    env:
-      WORKING_DIRECTORY: ./admin
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Admin | Build Docker Production
-        run: docker compose -f docker-compose.yml build
+        run: docker compose -f docker-compose.yml build admin
 
   docker-development:
     if: needs.files-changed.outputs.admin == 'true'
     name: Build Docker Development - Admin
     needs: files-changed
     runs-on: ubuntu-latest
-    env:
-      WORKING_DIRECTORY: ./admin
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Admin | Build Docker Development
-        run: docker compose build
-        working-directory: ${{env.WORKING_DIRECTORY}}
+        run: docker compose build admin admin-documentation admin-storybook
 
   docs:
     if: needs.files-changed.outputs.admin-docs == 'true'
