--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -49,30 +49,24 @@ jobs:
     name: Build Docker Production - Backend
     needs: files-changed
     runs-on: ubuntu-latest
-    env:
-      WORKING_DIRECTORY: ./backend
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Backend | Build Docker Production
-        run: docker compose -f docker-compose.yml build
-        working-directory: ${{env.WORKING_DIRECTORY}}
+        run: docker compose -f docker-compose.yml build backend
 
   docker-development:
     if: needs.files-changed.outputs.backend == 'true'
     name: Build Docker Development - Backend
     needs: files-changed
     runs-on: ubuntu-latest
-    env:
-      WORKING_DIRECTORY: ./backend
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Backend | Build Docker Development
-        run: docker compose build
-        working-directory: ${{env.WORKING_DIRECTORY}}
+        run: docker compose build backend backend-documentation
 
   docs:
     if: needs.files-changed.outputs.backend-docs == 'true'
