--- a/.github/workflows/frontend..yml
+++ b/.github/workflows/frontend..yml
@@ -44,30 +44,24 @@ jobs:
     name: Build Docker Production - Frontend
     needs: files-changed
     runs-on: ubuntu-latest
-    env:
-      WORKING_DIRECTORY: ./frontend
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Frontend | Build Docker Production
-        run: docker compose -f docker-compose.yml build
-        working-directory: ${{env.WORKING_DIRECTORY}}
+        run: docker compose -f docker-compose.yml build frontend
 
   docker-development:
     if: needs.files-changed.outputs.frontend == 'true'
     name: Build Docker Development - Frontend
     needs: files-changed
     runs-on: ubuntu-latest
-    env:
-      WORKING_DIRECTORY: ./frontend
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Frontend | Build Docker Development
-        run: docker compose build
-        working-directory: ${{env.WORKING_DIRECTORY}}
+        run: docker compose build frontend frontend-documentation frontend-storybook
 
   docs:
     if: needs.files-changed.outputs.frontend-docs == 'true'
