--- a/.github/workflows/presenter.yml
+++ b/.github/workflows/presenter.yml
@@ -44,30 +44,24 @@ jobs:
     name: Build Docker Production - Presenter
     needs: files-changed
     runs-on: ubuntu-latest
-    env:
-      WORKING_DIRECTORY: ./presenter
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Presenter | Build Docker Production
-        run: docker compose -f docker-compose.yml build
-        working-directory: ${{env.WORKING_DIRECTORY}}
+        run: docker compose -f docker-compose.yml build presenter
 
   docker-development:
     if: needs.files-changed.outputs.presenter == 'true'
     name: Build Docker Development - Presenter
     needs: files-changed
     runs-on: ubuntu-latest
-    env:
-      WORKING_DIRECTORY: ./presenter
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Presenter | Build Docker Development
-        run: docker compose build
-        working-directory: ${{env.WORKING_DIRECTORY}}
+        run: docker compose build presenter presenter-documentation presenter-storybook
 
   docs:
     if: needs.files-changed.outputs.presenter-docs == 'true'
