--- a/frontend/package.json
+++ b/frontend/package.json
@@ -94,6 +94,7 @@
     "vite-svg-loader": "^5.1.0",
     "vue": "3.4.27",
     "vue-i18n": "^9.13.1",
+    "vue3-toastify": "^0.2.1",
     "vuetify": "^3.5.17"
   },
   "devDependencies": {
