--- a/presenter/docker-compose.test.yml
+++ b/presenter/docker-compose.test.yml
@@ -18,7 +18,7 @@ services:
     environment:
       # Envs used in Dockerfile
       # - DOCKER_WORKDIR="/app"
-      # - PORT=3000
+      - PORT=3001
       # - BUILD_DATE="1970-01-01T00:00:00.00Z"
       # - BUILD_VERSION="0.0.0.0"
       # - BUILD_COMMIT="0000000"
