--- a/.github/workflows/e2e.run.tests.yml
+++ b/.github/workflows/e2e.run.tests.yml
@@ -38,14 +38,14 @@ jobs:
         id: e2e-run
         uses: cypress-io/github-action@v6
         with:
-          working-directory: cypress
+          working-directory: tests
 
       - name: E2E | if tests failed, compile html report
         if: ${{ failure() && steps.e2e-run.conclusion == 'failure' }}
         run: |
           cd cypress/
           npx tsx create-cucumber-html-report.ts
-        working-directory: cypress
+        working-directory: tests
 
       - name: Get PR number
         if: ${{ failure() && steps.e2e-run.conclusion == 'failure' }}
@@ -57,4 +57,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: boilerplate-e2e-test-report-pr-${{ steps.pr-number.outputs.pr }}
-          path: /home/runner/work/dreammall.earth/dreammall.earth/cypress/cypress/reports/dreammall-e2e_html_report
+          path: /home/runner/work/dreammall.earth/dreammall.earth/tests/cypress/reports/dreammall-e2e_html_report
