--- a/.github/workflows/e2e.test.lint.yml
+++ b/.github/workflows/e2e.test.lint.yml
@@ -25,7 +25,7 @@ jobs:
     needs: files-changed
     runs-on: ubuntu-latest
     env:
-      WORKING_DIRECTORY: ./cypress
+      WORKING_DIRECTORY: ./tests
     steps:
       - name: Set Node version
         uses: actions/setup-node@v4
