correct lint command in e2e linting worfklow

--- a/.github/workflows/e2e.test.lint.yml
+++ b/.github/workflows/e2e.test.lint.yml
@@ -36,5 +36,5 @@ jobs:
         uses: actions/checkout@master
 
       - name: E2E files | Lint
-        run: npm install && npm run test:lint:eslint
+        run: npm install && npm run test:lint
         working-directory: ${{env.WORKING_DIRECTORY}}
