--- a/frontend/package.json
+++ b/frontend/package.json
@@ -66,6 +66,8 @@
     "@intlify/unplugin-vue-i18n": "^4.0.0",
     "@mdi/font": "^7.4.47",
     "@types/compression": "^1.7.5",
+    "@types/d3-array": "^3.2.1",
+    "@types/d3-selection": "^3.0.10",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.2",
     "@vitejs/plugin-vue": "^5.0.5",
@@ -78,6 +80,7 @@
     "compression": "^1.7.4",
     "cookie": "^0.6.0",
     "cross-env": "^7.0.3",
+    "d3": "^7.9.0",
     "express": "^4.19.2",
     "graphql-tag": "^2.12.6",
     "js-cookie": "^3.0.5",
@@ -109,6 +112,7 @@
     "@storybook/vue3": "^8.1.6",
     "@storybook/vue3-vite": "^8.1.6",
     "@types/cookie": "^0.6.0",
+    "@types/d3": "^7.4.3",
     "@types/js-cookie": "^3.0.6",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
