add authentik database removal step to e2e test workflow

--- a/.github/workflows/e2e.run.tests.yml
+++ b/.github/workflows/e2e.run.tests.yml
@@ -18,6 +18,7 @@ jobs:
       - name: E2E | Boot up test system
         run: |
           cd authentik/
+          rm -rf database
           ./database.unpack.sh
           docker compose up -d
           cd ../frontend
