--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -6,10 +6,11 @@
     // Doesn't apply to server/, see ts-node config down below and server/tsconfig.json
     "moduleResolution": "Bundler",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "types": ["vite/client"],
+    "types": ["vite/client", "vitest/globals"],
     "skipLibCheck": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
+    "baseUrl": ".",
     "paths": {
       "#components/*": ["./src/components/*"],
       "#pages/*": ["./src/pages/*"],
