update authentik oauth scopes in database and frontend .env.dist

--- a/frontend/.env.dist
+++ b/frontend/.env.dist
@@ -6,7 +6,7 @@ PUBLIC_ENV__AUTH__CLIENT_ID="G3g0sjCjph1NAyGeeu5Te5ltx1I7WZ0DGB8i6vOI"
 PUBLIC_ENV__AUTH__REDIRECT_URI="http://localhost:3000/auth"
 PUBLIC_ENV__AUTH__SILENT_REDIRECT_URI="http://localhost:3000/silent-refresh"
 PUBLIC_ENV__AUTH__RESPONSE_TYPE="code"
-PUBLIC_ENV__AUTH__SCOPE="openid profile posts"
+PUBLIC_ENV__AUTH__SCOPE="openid profile email"
 PUBLIC_ENV__AUTH__UNAUTHORIZED_REDIRECT_URI="http://localhost:3001/"
 PUBLIC_ENV__AUTH__ADMIN_GROUP="authentik Admins"
 PUBLIC_ENV__AUTH__ADMIN_REDIRECT_URI="http://localhost:3002/signin"
