add event trigger pull_request_target to test workflows

--- a/.github/workflows/backend.test.build.code.yml
+++ b/.github/workflows/backend.test.build.code.yml
@@ -1,6 +1,6 @@
 name: "backend:test:build test code"
 
-on: push
+on: [push,pull_request_target]
 
 jobs:
   # only (but most important) job from this workflow required for pull requests
