--- a/.github/workflows/admin.test.unit.code.yml
+++ b/.github/workflows/admin.test.unit.code.yml
@@ -1,6 +1,6 @@
 name: "admin:test:unit test code with defined suites"
 
-on: push
+on: [push,pull_request_target]
 
 jobs:
   # only (but most important) job from this workflow required for pull requests
