--- a/.github/workflows/backend.test.lint.code.yml
+++ b/.github/workflows/backend.test.lint.code.yml
@@ -1,6 +1,6 @@
 name: "backend:test:lint code with defined linters"
 
-on: push
+on: [push,pull_request_target]
 
 jobs:
   # only (but most important) job from this workflow required for pull requests
