--- a/.github/workflows/frontend.test.build.docker.yml
+++ b/.github/workflows/frontend.test.build.docker.yml
@@ -1,6 +1,6 @@
 name: "frontend:test:build test docker"
 
-on: push
+on: [push,pull_request_target]
 
 jobs:
   # only (but most important) job from this workflow required for pull requests
