--- a/.github/workflows/test.code.yml
+++ b/.github/workflows/test.code.yml
@@ -1,6 +1,6 @@
 name: "dreammall:test:code with defined tests & linters"
 
-on: push
+on: [push,pull_request_target]
 
 jobs:
   # only (but most important) job from this workflow required for pull requests
