--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,13 +16,13 @@ ENV PORT="4000"
 
 # Labels
 LABEL org.label-schema.build-date="${BUILD_DATE}"
-LABEL org.label-schema.name="it4c:backend"
-LABEL org.label-schema.description="IT4C Backend Boilerplate"
-LABEL org.label-schema.usage="https://github.com/IT4Change/boilerplate-backend/blob/master/README.md"
-LABEL org.label-schema.url="https://github.com/IT4Change/boilerplate-backend"
-LABEL org.label-schema.vcs-url="https://github.com/IT4Change/boilerplate-backend/tree/master/"
+LABEL org.label-schema.name="dreammall:backend"
+LABEL org.label-schema.description="DreamMall Backend"
+LABEL org.label-schema.usage="https://github.com/dreammall-earth/dreammall.earth/tree/master/backend/README.md"
+LABEL org.label-schema.url="https://github.com/dreammall-earth/dreammall.earth/tree/master/backend"
+LABEL org.label-schema.vcs-url="https://github.com/dreammall-earth/dreammall.earth/tree/master/backend"
 LABEL org.label-schema.vcs-ref="${BUILD_COMMIT}"
-LABEL org.label-schema.vendor="IT4C"
+LABEL org.label-schema.vendor="DreamMall"
 LABEL org.label-schema.version="${BUILD_VERSION}"
 LABEL org.label-schema.schema-version="1.0"
 LABEL maintainer="info@it4c.dev"
