--- a/presenter/Dockerfile
+++ b/presenter/Dockerfile
@@ -16,13 +16,13 @@ ENV PORT="3000"
 
 # Labels
 LABEL org.label-schema.build-date="${BUILD_DATE}"
-LABEL org.label-schema.name="it4c:frontend"
-LABEL org.label-schema.description="IT4C Frontend Boilerplate"
-LABEL org.label-schema.usage="https://github.com/IT4Change/boilerplate-frontend/blob/master/README.md"
-LABEL org.label-schema.url="https://github.com/IT4Change/boilerplate-frontend"
-LABEL org.label-schema.vcs-url="https://github.com/IT4Change/boilerplate-frontend/tree/master/"
+LABEL org.label-schema.name="dreamMall:presenter"
+LABEL org.label-schema.description="DreamMall Presenter"
+LABEL org.label-schema.usage="https://github.com/dreammall-earth/dreammall.earth/tree/master/presenter/README.md"
+LABEL org.label-schema.url="https://github.com/dreammall-earth/dreammall.earth/tree/master/presenter"
+LABEL org.label-schema.vcs-url="https://github.com/dreammall-earth/dreammall.earth/tree/master/presenter/"
 LABEL org.label-schema.vcs-ref="${BUILD_COMMIT}"
-LABEL org.label-schema.vendor="IT4C"
+LABEL org.label-schema.vendor="DreamMall"
 LABEL org.label-schema.version="${BUILD_VERSION}"
 LABEL org.label-schema.schema-version="1.0"
 LABEL maintainer="info@it4c.dev"
