run frontend and presenter natively in e2e test workflow

--- a/.github/workflows/e2e.run.tests.yml
+++ b/.github/workflows/e2e.run.tests.yml
@@ -22,10 +22,12 @@ jobs:
           docker compose up -d
           cd ../frontend
           cp .env.dist .env
-          docker compose -f docker-compose.test.yml up -d frontend
+          npm install
+          npm run prod &
           cd  ../presenter
           cp .env.dist .env
-          docker compose -f docker-compose.test.yml up -d presenter
+          npm install
+          npm run prod &
           sleep 4m
 
       - name: Install cucumber-json-formatter
