--- a/frontend/package.json
+++ b/frontend/package.json
@@ -70,6 +70,7 @@
     "cross-env": "^7.0.3",
     "express": "^4.19.2",
     "graphql-tag": "^2.12.6",
+    "graphql-ws": "^5.16.0",
     "js-cookie": "^3.0.5",
     "oidc-client-ts": "^3.0.1",
     "pinia": "^2.1.7",
@@ -85,7 +86,8 @@
     "vue": "3.4.27",
     "vue-i18n": "^9.13.1",
     "vue3-toastify": "^0.2.1",
-    "vuetify": "^3.5.17"
+    "vuetify": "^3.5.17",
+    "ws": "^8.17.1"
   },
   "devDependencies": {
     "@eslint-community/eslint-plugin-eslint-comments": "^4.3.0",
@@ -102,6 +104,7 @@
     "@types/cookie": "^0.6.0",
     "@types/fs-extra": "^11.0.4",
     "@types/js-cookie": "^3.0.6",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
     "@vitest/coverage-v8": "^1.6.0",
