--- a/backend/jest.config.json
+++ b/backend/jest.config.json
@@ -7,6 +7,7 @@
     "!src/index.ts",
     "!src/logger.ts",
     "!src/server/logger.ts",
+    "!src/server/server.ts",
     "!src/prisma.ts",
     "!**/node_modules/**",
     "!build/**"
