refactor(other): use pnpm
Motivation
----------
`pnpm` itself has a number of advantages, two are very relevant for our repository:
* De-duplication of node modules
* Run commands across packages

This will also setup `dotenvx` to read .env files (for unique port numbers).

It will also make local development with `docker compose` obsolete for our nodejs projects.

How to test
-----------
1. `pnpm install`
2. `pnpm run -r dev`

commits:
  * fix unique ports and environments
  * fix: extraneous import
  * remove obsolete `package-lock.json`
  * run `pnpm install`
  * run `corepack use pnpm@latest`

--- a/.github/workflows/admin.deploy.chromatic.yml
+++ b/.github/workflows/admin.deploy.chromatic.yml
@@ -13,9 +13,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4
         with:
           node-version-file: './.tool-versions'
+          cache: 'pnpm'
+      - run: pnpm install
       - name: Admin | Build
-        run: npm install && npm run chromatic -- --exit-zero-on-changes
-        working-directory: ./admin
+        run: pnpm run --filter dreammall-admin chromatic -- --exit-zero-on-changes
