--- a/presenter/.env.dist
+++ b/presenter/.env.dist
@@ -8,3 +8,6 @@ PUBLIC_ENV__ENDPOINTS__GRAPHQL_URI=http://localhost:4000/
 # META
 PUBLIC_ENV__META__BASE_URL="http://localhost:3000"
 PUBLIC_ENV__META__DEFAULT_AUTHOR="DreamMall Verlag GbR"
+
+PORT=3001
+PORT_HMR=24678
