--- a/frontend/.env.dist
+++ b/frontend/.env.dist
@@ -17,3 +17,6 @@ PUBLIC_ENV__ENDPOINTS__GRAPHQL_URI=http://localhost:4000/
 # META
 PUBLIC_ENV__META__BASE_URL="http://localhost:3000"
 PUBLIC_ENV__META__DEFAULT_AUTHOR="DreamMall Verlag GbR"
+
+PORT=3000
+PORT_HMR=24679
