--- a/infrastructure/vagrant/Vagrantfile
+++ b/infrastructure/vagrant/Vagrantfile
@@ -1,11 +1,6 @@
-# Defines our Vagrant environment
-#
-# -*- mode: ruby -*-
-# vi: set ft=ruby :
-
 Vagrant.configure("2") do |config|
-  config.vm.box = 'generic/alpine319'
-  config.vm.provision :shell, path: "bootstrap.sh"
+  config.vm.box = "packer_dreammall"
+  config.vm.box_url = "file://../packer-output/package.box"
   config.vm.synced_folder '.', '/vagrant', disabled: true
   config.vm.network "forwarded_port", guest: 80, host: 8000
   config.vm.network "forwarded_port", guest: 8080, host: 8080
