refactor(other): use pnpm
Motivation
----------
`pnpm` itself has a number of advantages, two are very relevant for our repository:
* De-duplication of node modules
* Run commands across packages

This will also setup `dotenvx` to read .env files (for unique port numbers).

It will also make local development with `docker compose` obsolete for our nodejs projects.

How to test
-----------
1. `pnpm install`
2. `pnpm run -r dev`

commits:
  * fix unique ports and environments
  * fix: extraneous import
  * remove obsolete `package-lock.json`
  * run `pnpm install`
  * run `corepack use pnpm@latest`
  * explicitly add missing dependencies
  * install `vue` as development dependency

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,15 +14,14 @@
     "build": "tsc",
     "start": "TZ=UTC TS_NODE_BASEURL=./build node -r tsconfig-paths/register build/src/index.js",
     "dev": "TZ=UTC nodemon -w src --ext ts,json --exec ts-node -r tsconfig-paths/register src/index.ts",
-    "db:migrate": "TZ=UTC npx prisma migrate dev",
-    "db:migrate:deploy": "TZ=UTC npx prisma migrate deploy",
-    "db:reset": "TZ=UTC npx prisma migrate reset --force",
-    "db:seed": "TZ=UTC npx prisma db seed",
-    "test:lint": "npm run test:lint:eslint",
+    "db:migrate": "TZ=UTC pnpm dlx prisma migrate dev",
+    "db:migrate:deploy": "TZ=UTC pnpm dlx prisma migrate deploy",
+    "db:reset": "TZ=UTC pnpm dlx prisma migrate reset --force",
+    "db:seed": "TZ=UTC pnpm dlx prisma db seed",
+    "test:lint": "pnpm run test:lint:eslint",
     "test:lint:eslint": "eslint --ext .ts,.tsx,.js,.jsx,.cjs,.mjs,.json,.yml,.yaml --max-warnings 0 .",
     "test:unit": "TZ=UTC jest --runInBand --forceExit --detectOpenHandles",
-    "test": "npm run test:lint && npm run test:unit",
-    "update": "npx npm-check-updates"
+    "test": "pnpm run test:lint && pnpm run test:unit",
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
