--- a/frontend/.env.dist
+++ b/frontend/.env.dist
@@ -18,3 +18,6 @@ PUBLIC_ENV__ENDPOINTS__WEBSOCKET_URI=ws://localhost:4000/subscriptions
 # META
 PUBLIC_ENV__META__BASE_URL="http://localhost:3000"
 PUBLIC_ENV__META__DEFAULT_AUTHOR="DreamMall Verlag GbR"
+
+PORT=3000
+PORT_HMR=24679
