--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "remark-cli": "^12.0.1",
     "remark-gfm": "^4.0.0",
     "remark-lint-list-item-indent": "^4.0.0",
+    "remark-lint-maximum-line-length": "^4.0.1",
     "remark-preset-lint-consistent": "^6.0.0",
     "remark-preset-lint-markdown-style-guide": "^6.0.0",
     "remark-preset-lint-recommended": "^7.0.0",
     "vuepress": "^2.0.0-rc.11"
-  }
+  },
+  "packageManager": "pnpm@9.3.0+sha512.ee7b93e0c2bd11409c6424f92b866f31d3ea1bef5fbe47d3c7500cdc3c9668833d2e55681ad66df5b640c61fa9dc25d546efa54d76d7f8bf54b13614ac293631"
 }
