--- a/admin/package.json
+++ b/admin/package.json
@@ -29,27 +29,26 @@
   },
   "homepage": "https://github.com/dreammall-earth/dreammall.earth/blob/master/frontend/README.md",
   "scripts": {
-    "dev": "npm run server:dev",
-    "prod": "npm run build && npm run server:prod",
-    "build": "vite build  && npm run server:build",
+    "dev": "pnpm run server:dev",
+    "prod": "pnpm run build && pnpm run server:prod",
+    "build": "vite build  && pnpm run server:build",
     "server": "node --loader ts-node/esm ./server/index.ts",
-    "server:dev": "npm run server",
+    "server:dev": "pnpm run server",
     "server:prod": "node ./build/index.cjs",
-    "server:prod:ts": "cross-env NODE_ENV=production npm run server",
+    "server:prod:ts": "cross-env NODE_ENV=production pnpm run server",
     "server:build": "tsx scripts/buildServer/buildServer",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build -o build/storybook",
     "storybook:test": "test-storybook",
-    "test:lint": "npm run test:lint:eslint && npm run test:lint:style && npm run test:lint:locales",
+    "test:lint": "pnpm run test:lint:eslint && pnpm run test:lint:style && pnpm run test:lint:locales",
     "test:lint:eslint": "eslint --ext .vue,.ts,.tsx,.js,.jsx,.cjs,.mjs,.json,.yml,.yaml --max-warnings 0 .",
     "test:lint:locales": "scripts/locales/locales.sh src/locales",
     "test:lint:style": "stylelint --max-warnings 0 --ignore-path .gitignore \"**/*.{css,scss,vue,vuex}\"",
-    "test:unit": "npm run test:unit:dev -- run --coverage",
-    "test:unit:update": "npm run test:unit:dev -- run --coverage -u",
+    "test:unit": "pnpm run test:unit:dev -- run --coverage",
+    "test:unit:update": "pnpm run test:unit:dev -- run --coverage -u",
     "test:unit:dev": "vitest",
-    "test": "npm run test:lint && npm run test:unit",
-    "chromatic": "npx chromatic --build-script-name storybook:build",
-    "update": "npx npm-check-updates"
+    "test": "pnpm run test:lint && pnpm run test:unit",
+    "chromatic": "pnpm dlx chromatic --build-script-name storybook:build"
   },
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^4.0.0",
