--- a/presenter/package.json
+++ b/presenter/package.json
@@ -52,33 +52,34 @@
     "update": "npx npm-check-updates"
   },
   "dependencies": {
-    "@apollo/client": "^3.10.5",
+    "@apollo/client": "^3.10.8",
     "@intlify/unplugin-vue-i18n": "^4.0.0",
     "@mdi/font": "^7.4.47",
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.14.2",
+    "@types/node": "^20.14.9",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/apollo-composable": "^4.0.2",
     "@vue/apollo-option": "^4.0.0",
     "@vue/compiler-sfc": "^3.4.29",
-    "@vue/server-renderer": "3.4.27",
+    "@vue/server-renderer": "3.4.31",
+    "@vuepress/theme-default": "^2.0.0-rc.35",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.19.2",
-    "graphql": "^16.8.2",
+    "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
-    "sass": "^1.77.5",
+    "sass": "^1.77.6",
     "sass-loader": "^14.2.1",
     "sirv": "^2.0.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "validator": "^13.12.0",
-    "vike": "^0.4.176",
-    "vite": "^5.3.1",
-    "vue": "3.4.27",
+    "vike": "^0.4.177",
+    "vite": "^5.3.2",
+    "vue": "3.4.31",
     "vue-i18n": "^9.13.1",
     "vuetify": "^3.5.15"
   },
@@ -86,14 +87,14 @@
     "@eslint-community/eslint-plugin-eslint-comments": "^4.3.0",
     "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
     "@pinia/testing": "^0.1.3",
-    "@storybook/addon-essentials": "^8.1.9",
-    "@storybook/addon-interactions": "^8.1.9",
-    "@storybook/addon-links": "^8.1.9",
-    "@storybook/blocks": "^8.1.9",
-    "@storybook/test-runner": "^0.18.2",
+    "@storybook/addon-essentials": "^8.1.11",
+    "@storybook/addon-interactions": "^8.1.11",
+    "@storybook/addon-links": "^8.1.11",
+    "@storybook/blocks": "^8.1.11",
+    "@storybook/test-runner": "^0.19.0",
     "@storybook/testing-library": "^0.2.2",
-    "@storybook/vue3": "^8.1.9",
-    "@storybook/vue3-vite": "^8.1.9",
+    "@storybook/vue3": "^8.1.11",
+    "@storybook/vue3-vite": "^8.1.11",
     "@types/fs-extra": "^11.0.4",
     "@types/validator": "^13.11.10",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
@@ -118,19 +119,24 @@
     "eslint-plugin-vuetify": "^2.4.0",
     "eslint-plugin-yml": "^1.14.0",
     "fs-extra": "^11.2.0",
-    "happy-dom": "^14.12.0",
+    "happy-dom": "^14.12.3",
     "mock-apollo-client": "^1.3.1",
     "prettier": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "storybook": "^8.1.9",
+    "remark-cli": "^12.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-preset-lint-consistent": "^6.0.0",
+    "remark-preset-lint-markdown-style-guide": "^6.0.0",
+    "remark-preset-lint-recommended": "^7.0.0",
+    "storybook": "^8.1.11",
     "stylelint": "^16.6.1",
     "stylelint-config-css-modules": "^4.4.0",
     "stylelint-config-recess-order": "^5.0.1",
     "stylelint-config-recommended-vue": "^1.5.0",
-    "stylelint-config-standard": "^36.0.0",
+    "stylelint-config-standard": "^36.0.1",
     "stylelint-config-standard-scss": "^13.1.0",
-    "tsx": "^4.15.5",
+    "tsx": "^4.16.0",
     "vite-plugin-checker": "^0.6.4",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-vuetify": "^2.0.3",
