--- a/.github/workflows/test.code.yml
+++ b/.github/workflows/test.code.yml
@@ -3,8 +3,24 @@ name: "dreammall:test:code with defined tests & linters"
 on: [push,pull_request_target]
 
 jobs:
+  files-changed:
+    name: Detect File Changes - admin/
+    runs-on: ubuntu-latest
+    outputs:
+      markdown: ${{ steps.filter.outputs.markdown }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dorny/paths-filter@v3.0.2
+        id: filter
+        with:
+          filters: |
+            markdown:
+              - '/**/*.md'
+  
   test:
+  if: needs.files-changed.outputs.markdown == 'true'
     name: Test - Code
+    needs: files-changed
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
