fix(other): change the indention of if in workflow test code.
The workflow Test Code was not triggering anymore.

Co-authored-by: mahula <lenzmath@posteo.de>

--- a/.github/workflows/test.code.yml
+++ b/.github/workflows/test.code.yml
@@ -4,7 +4,7 @@ on: [push,pull_request_target]
 
 jobs:
   files-changed:
-    name: Detect File Changes - admin/
+    name: Detect File Changes
     runs-on: ubuntu-latest
     outputs:
       markdown: ${{ steps.filter.outputs.markdown }}
@@ -18,7 +18,7 @@ jobs:
               - '/**/*.md'
   
   test:
-  if: needs.files-changed.outputs.markdown == 'true'
+    if: needs.files-changed.outputs.markdown == 'true'
     name: Test - Code
     needs: files-changed
     runs-on: ubuntu-latest
